--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -23,6 +23,7 @@ a{
 }
 body{
     background-color:rgb(171, 255, 255);
+
 }
 .background{
     position: relative;
@@ -40,20 +41,7 @@ body{
     filter:opacity(0.5);
     z-index: -1;
     background-size: cover;
-    background-position: center; 
-}
-footer{
-    border-bottom: 80px solid rgb(11, 23, 34);
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: none;    
-}
-footer::after{
-    border-bottom: 80px solid rgb(11, 23, 34);
-    border-radius:50%;
-    position: absolute;
-    top: 50px;
+    background-position: center;
 }
 
 
@@ -114,7 +102,12 @@ ul button{
     justify-content:space-between;
 }
 .esquerdacontainer{
+    width: auto;
     height: auto;    
+}
+.lateralcontainer{
+    width: auto;
+    height: auto;
 }
 #bleach{
     color: white;
