--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
 @font-face{
-    font-family: Swordsman;
+    font-family: swordsman;
     src: url(../fonts/Swordsman.ttf);
 }
 @font-face{
-font-family: Moon;
+font-family: moon;
 src: url(../fonts/MOONRUNE.TTF);
 }
 @font-face{
-font-family: Crush;
+font-family: crush;
 src: url(../fonts/CrushYourEnemies_REGULAR.ttf);
 }
 
@@ -102,7 +102,7 @@ padding: 5px;
     background-color: aliceblue;
 }
 #title{
-    font-family: Swordsman;
+    font-family: swordsman;
 }
 #estilo{
     color: white;
@@ -125,7 +125,7 @@ padding: 5px;
     text-align: right;
 }
 #iconmenu{
-    font-family: Swordsman;
+    font-family: swordsman;
     color: black;
 }
 
@@ -158,7 +158,7 @@ padding: 5px;
 }
 #subtitle{
     color: black;
-    font-family: Crush;
+    font-family: crush;
     font-size:small;
 }
 ul.categorias {
@@ -203,6 +203,7 @@ ul.categorias {
     display: inline-block;
     padding: 2.7vh;
 }
+/* Reposividade no carrosel */
 @media (max-width: 320px){
     .carousel-control-prev::before {
         background-color: transparent;
