--- a/css/index.css
+++ b/css/index.css
@@ -73,12 +73,12 @@ background-repeat: repeat;
 
 
 /* Navegação do topo */
+
 nav{
 width: 100%;
 height: 60px;
 border-bottom: 10px solid rgb(11, 23, 34);
 font-weight: bolder;
-
 }
 input,  textarea,  select,  button{
 border: solid 1px #fffb00;
@@ -181,7 +181,6 @@ ul.categorias {
 }
 /* substituindo as setas*/
 
-
 .carousel-control-prev {
     background-image: url("../images/setaesquerda.png");
     background-size: cover;
@@ -189,8 +188,8 @@ ul.categorias {
     height: auto;
     display: inline-block;
     padding: 2.8vh;
+    z-index: 1;
 }  
-
 .carousel-control-next {
     background-image: url("../images/setadireita.png");
     background-size: cover;
@@ -198,23 +197,21 @@ ul.categorias {
     height: auto;
     display: inline-block;
     padding: 2.7vh;
+    z-index: 1;
 }
 /* Reposividade no carrosel */
 @media (max-width: 320px){
-    .carousel-control-prev::before {
-        background-color: transparent;
-     }
+
     .carousel-control-prev {
         background-image: url("../images/setaesquerda.png");
         background-size: cover;
         width: auto;
         height: auto;
         display: inline-block;
-        padding:1.1vh;        
+        padding:1.1vh;
+        z-index: 1 ;        
     }  
-     .carousel-control-prev::before {
-        background-color: transparent;
-     }
+
     .carousel-control-next {
         background-image: url("../images/setadireita.png");
         background-size: cover;
@@ -222,24 +219,22 @@ ul.categorias {
         height: auto;
         display: inline-block;
         padding: 1.0vh;
+        z-index: 1 ;     
     }      
 }
 
 @media (max-width: 766px) and (min-width: 321px) {
-    .carousel-control-prev::before {
-        background-color: transparent;
-     }
+
     .carousel-control-prev {
         background-image: url("../images/setaesquerda.png");
         background-size: cover;
         width: auto;
         height: auto;
         display: inline-block;
-        padding:2.0vh;        
+        padding:2.0vh;
+        z-index: 1 ;             
     }  
-     .carousel-control-prev::before {
-        background-color: transparent;
-     }
+
     .carousel-control-next {
         background-image: url("../images/setadireita.png");
         background-size: cover;
@@ -247,23 +242,21 @@ ul.categorias {
         height: auto;
         display: inline-block;
         padding: 1.9vh;
+        z-index: 1 ;      
     }      
 }
 @media (min-width: 1200px){
-    .carousel-control-prev::before {
-        background-color: transparent;
-     }
+
     .carousel-control-prev {
         background-image: url("../images/setaesquerda.png");
         background-size: cover;
         width: auto;
         height: auto;
         display: inline-block;
-        padding:4.6vh;        
+        padding:4.6vh;
+        z-index: 1 ;                             
     }  
-     .carousel-control-prev::before {
-        background-color: transparent;
-     }
+
     .carousel-control-next {
         background-image: url("../images/setadireita.png");
         background-size: cover;
@@ -271,6 +264,7 @@ ul.categorias {
         height: auto;
         display: inline-block;
         padding: 4.5vh;
+        z-index: 1 ;          
     }      
 }
 
